tests/extensions/classes/syntaxErr/emptyClass.wacc
begin
    class sa is

    end
end